# hxutil

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  a.out  test.s
Contents/: Info.plist
Contents/Resources/: icon.icns
include/: code_editor.h  color_palette.h  file_modifier.h  hex_mod.h  highlighter.h  lanugage_specifics.h  mainwindow.h  settings.h  tab_widget.h
src/: binary_file_handler.cppm  code_editor.cpp  file_modifier.cpp  highlighter.cpp  main.cpp  mainwindow.cpp  settings.cpp  tab_widget.cpp
src/highlighter/: ARMv6_ASM_highlighter.cpp  c_highlighter.cpp  highlighter.cpp
ui/: mainwindow.ui  settings.ui
